@@ -23,23 +23,13 @@
     
     
     <dependencies>
-        
-        <dependency>
-            <groupId>at.ac.tuwien.dsg.hinc</groupId>
-            <artifactId>model</artifactId>
-            <version>1.0</version>
-        </dependency>
 
         <dependency>
             <groupId>at.ac.tuwien.dsg.hinc</groupId>
             <artifactId>common</artifactId>
             <version>1.0</version>
         </dependency>
-        <dependency>
-            <groupId>at.ac.tuwien.dsg.hinc</groupId>
-            <artifactId>communication</artifactId>
-            <version>1.0</version>
-        </dependency>
+
         <!--        <dependency>
             <groupId>at.ac.tuwien.dsg.hinc</groupId>
             <artifactId>collector</artifactId>
@@ -49,6 +39,14 @@
             <groupId>at.ac.tuwien.dsg.hinc</groupId>
             <artifactId>repository</artifactId>
             <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.2.0</version>
+            <!--<version>3.5.4</version>-->
+            <type>jar</type>
         </dependency>
         <!--        <dependency>
             <groupId>com.google.guava</groupId>
@@ -218,9 +216,6 @@
                         <phase>package</phase>
                         <configuration>
                             <path>/${project.build.finalName}</path>
-                            <systemProperties>
-                                <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
-                            </systemProperties>
                         </configuration>
                     </execution>
                 </executions>
